# project01

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build.bat  chrome_cookie_retriever.hpp  example.cpp  vcpkg.json
include/: chrome_cookie_retriever.hpp  cookie.hpp  webhook_sender.hpp
pizzagame/: CMakeLists.txt  build.bat  build_with_vs.bat  copy_dlls.bat  vcpkg.json
pizzagame/include/: game.hpp  order.hpp  pizza.hpp  player.hpp
pizzagame/src/: game.cpp  main.cpp  order.cpp  pizza.cpp  player.cpp
src/: chrome_cookie_retriever.cpp  cookie.cpp  main.cpp  test_webhook.cpp  webhook_sender.cpp
